main.css
html,
body {
    font-family: "sans-serif";
    font-style: normal;
    background-color: #faf9fb;
}

h1{
  font-size: 32pt;
  letter-spacing: 5pt;
  color: #f88e8f;
  text-align: center;
  margin-top: 0;
  margin-bottom: 35pt;
}

.containercontainer {
  display: flex;
  justify-content: space-around;
}

.appcontainer{
width: 300px;
background-color: #ffffff;
display: inline-flex;
box-shadow: 0 0 5px #888888;
border-radius: 20px;
padding: 8px;
transition: .5s;
opacity: 0;
vertical-align: top;
font-weight: bold;
flex-wrap: wrap;
justify-content: space-around;
}

.extrainfo {
  text-align: center;
}

.extrainfo > p > a {
font-size: 12pt;
margin: 0;
}

.appicon {
  width: 80px;
  margin: 8px;
  padding: 0;
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%);
  -o-filter: grayscale(100%);
  transition: .3s;
}

.appicon:hover {
  filter: none;
  -webkit-filter: none;
  -o-filter: none;
}

.applink {
  margin: 0;
  padding: 0;
}

.usericon{
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.togglecontainer {
  display: flex;
  justify-content: space-around;
}

a {
   color: #999;
   text-decoration: none;
   transition:.3s;
   padding:12px;
   font-size: 48pt;
}

a:focus {
  outline: 0;
}

a:hover {
   color: #555;
}

.main {
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: 700px;
}

.footer {
  position: fixed;
  bottom: 0;
  font-size: 12pt;
}

.footer > a {
  padding: 0;
  margin: 0;
  font-size: 12pt;
}

